<resources>
    <string name="appName">智芯RFID智能档案管理系统</string>
    <string name="title">智芯RFID智能档案管理系统</string>
    <string name="titleEng">SMART CHIP ARCHIVES MANAGEMENT SYSTEM</string>
    <string name="ERROR_TOAST_NO_NETWORK">没有网络，请检查网络</string>
    <string name="ERROR_TOAST_SEVER_ERROR">服务器请求错误</string>
    <string name="no_keycode_back">禁止使用回退键！</string>
    <string name="no_keycode_home">禁止使用HOME键！</string>
    <string name="no_keycode_menu">禁止使用MENU键！</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="opinion">查看</string>
    <string name="air"></string>
    <string name="null_prompt">您暂未设置该信息，请点击完成设置!</string>
    <string name="set">设置</string>
    <string name="cancel">取 消</string>
    <string name="sure">确定</string>
    <string name="quit">退出</string>
    <string name="query">查询</string>
    <string name="open">打开</string>
    <string name="click_ok_to_exit">点击确定退出</string>
    <string name="fill_complete">请填写完整！</string>
    <string name="misconfiguration">填写的配置有误</string>
    <string name="update_completed">更新成功。</string>
    <string name="no_permission">无权限</string>
    <string name="modify_time">修改时间</string>
    <string name="is_null">--</string>
    <string name="login">登 录</string>
    <string name="fingerprint_entry_prompt">请将手指放于屏幕下方指纹传感器上</string>
    <string name="face_entry_prompt">请正对屏幕右侧柜槽人脸识别摄像头</string>
    <string name="face_device_offline"><![CDATA[<font color="#BF360C">人脸设备离线，请使用其他方式登录</font>]]></string>
    <string name="fingerprint_device_offline"><![CDATA[<font color="#BF360C">指纹设备离线，请使用其他方式登录</font>]]></string>
    <string name="other_login">其他方式登录</string>
    <string name="other_login_prompt">点击屏幕任意位置使用密码登录</string>
    <string name="admin_login">其他方式登录</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="login_by_fingerprint">指纹登录</string>
    <string name="password_admin">请输入管理员密码</string>
    <string name="barcode_hint">手动输入库位号</string>
    <string name="barcode_ruler">（库位号规则:库房编号-第几排-第几列A/B面-第几层-第几号，示例:1-1-1A-1-1）</string>
    <string name="account">账  号：</string>
    <string name="password">密  码：</string>
    <string name="account_hint">请输入您的账号</string>
    <string name="password_hint">请输入您的密码</string>
    <string name="pwd_error">您的密码错误！</string>
    <string name="pwd_null">您的账号密码为null，请联系管理员，或者在平台修改密码</string>
    <string name="pwd_account_error">您的账户或密码错误</string>
    <string name="pwd_account_unavailable">您的账户已被限制不可用</string>
    <string name="account_null">无该警员记录！</string>
    <string name="face_landing_successful">人脸识别成功，欢迎%1$s！</string>
    <string name="loading_faces_title">APP启动</string>
    <string name="loading_faces_msg">正在加载人脸算法库，请稍后</string>
    <string name="pwd_landing_successful">密码登录成功，欢迎%1$s！</string>
    <string name="cabinet_online_box_name">%1$s</string>
    <string name="title_activity_main_menu">管理菜单</string>
    <string name="warehousing">存档</string>
    <string name="outbound">取档</string>
    <string name="inventory_storage">预览</string>
    <string name="personnel_management">指纹</string>
    <string name="system_settings">设置</string>
    <string name="logout">退出</string>
    <string name="access_operation">存取操作</string>
    <string name="regional_positioning_management">档案管理</string>
    <string name="change_password">密码修改</string>
    <string name="synchronize">同步</string>
    <string name="title_activity_access">存取操作</string>
    <string name="title_activity_accessing">存取操作</string>
    <string name="title_box_name">%1$s柜</string>
    <string name="title_box_file_number">本柜共有：%1$d本档案</string>
    <string name="box_offline">%1$s号柜体离线，请稍后重试。</string>
    <string name="box_error">%1$s号柜体异常，请检查</string>
    <string name="box_door_status_error">%1$s柜门未关，或者锁体损坏，请检查！</string>
    <string name="box_received_open_door">%1$s号柜体收到开门指令。</string>
    <string name="box_door_lock_on">%1$s号柜体门已开启。</string>
    <string name="box_door_lock_on_error">%1$s号柜体门异常开启，请立马关闭。</string>
    <string name="box_door_lock_off">%1$s号柜体门已关闭。</string>
    <string name="box_door_lock_off_and_start_inventory">%1$s号柜体门已关闭，准备开始盘点。</string>
    <string name="box_received_open_light">%1$s号柜体收到开灯指令。</string>
    <string name="close_door_first">请先关闭%1$s号柜体的门。</string>
    <string name="inventorying_one_box">正在盘点，请稍后......</string>
    <string name="inventorying_all">正在整柜盘点，等待时间较久，请稍后......</string>
    <string name="data_comparison">正在数据比对中......</string>
    <string name="confirm_access_operation">请确认下方的卷宗是本次操作结果吗？</string>
    <string name="close_dialog_count_down">%1$d秒后自动关闭</string>
    <string name="no_access_operation_occurred">本次未发生存取操作。</string>
    <string name="this_operation">本次操作：</string>
    <string name="deposit_quantity">存入：%1$d本，</string>
    <string name="deposit_quantity_1">存入：%1$d本。</string>
    <string name="take_out_the_quantity">取出：%1$d本。</string>
    <string name="automatically_shut_down">%1$d秒后自动关闭</string>
    <string name="number_of_in_in_box">%1$d本</string>
    <string name="inventory_time_out">盘点超时！</string>
    <string name="inventory_end">盘点结束！</string>
    <string name="main_screen">主\n屏\n幕</string>
    <string name="too_many_files">卷宗过多</string>
    <string name="title_activity_system_settings">系统设置</string>
    <string name="restart_now_for_set">您修改的设置需要重启生效，是否立即重启？</string>
    <string name="click_settings">点击设置</string>
    <string name="title_local_parameters">本地参数</string>
    <string name="device_id">设备编号</string>
    <string name="unit_number">单位编号</string>
    <string name="unit_address">单位地址</string>
    <string name="device_type_change_title">是否切换设备类型?</string>
    <string name="device_type_change_msg">注意：切换设备类型将清空所有配置数据</string>
    <string name="device_type_change">设备类型切换</string>
    <string name="device_type">设备类型</string>
    <string name="title_service_parameter">网络配置</string>
    <string name="web_api_service">WEB服务器配置</string>
    <string name="this_machine_ip">本机固定IP配置</string>
    <string name="title_web_api_service_ip">WEB服务器IP:</string>
    <string name="title_web_api_service_port">WEB服务器端口:</string>
    <string name="title_mqtt">MQTT服务器配置</string>
    <string name="title_mqtt_ip">MQTT服务器IP:</string>
    <string name="title_mqtt_port">MQTT服务器端口:</string>
    <string name="device_ethernet">设备以太网-外网（部分服务需设备重启生效）</string>
    <string name="device_internal_ethernet">设备以太网-内网（部分服务需设备重启生效）</string>
    <string name="title_ip">IP地址：</string>
    <string name="title_subnet_mask">子网掩码：</string>
    <string name="title_gateway">网关：</string>
    <string name="title_dns">DNS：</string>
    <string name="eth_0_caption_text">IP地址：%1$s 子网掩码：%2$s 网关：%3$s DNS：%4$s</string>
    <string name="eth_1_caption_text">IP地址：%1$s 子网掩码：%2$s</string>
    <string name="web_api_caption_text">%1$s:%2$d</string>
    <string name="cabinet_port_caption_text">%1$s</string>
    <string name="title_daj_setting">添加档案组架</string>
    <string name="number_of_daj">档案组架数量：%1$s</string>
    <string name="light_serial_setting">灯控串口配置</string>
    <string name="light_serial_debug">灯控调试</string>
    <string name="title_cabinet">档案柜配置</string>
    <string name="number_of_boxes">添加档案柜</string>
    <string name="light_serial_setting_zg">组大灯灯控串口配置</string>
    <string name="light_serial_debug_zg">组大灯灯控调试</string>
    <string name="cabinet_service_port">档案柜读写器服务端口配置</string>
    <string name="number_of_boxes_caption_text">档案柜数量：%1$s</string>
    <string name="open_door">打开柜门</string>
    <string name="ytj_serial_setting">读写器串口配置</string>
    <string name="ytj_serial_debug">读写器调试</string>
    <string name="skq_serial_setting">刷卡设备串口配置</string>
    <string name="skq_serial_debug">刷卡设备调试</string>
    <string name="face_port">人脸设备服务端口配置</string>
    <string name="face_debug">人脸设备调试</string>
    <string name="equipment_id_setting">操作屏设备ID配置</string>
    <string name="equipment_id_ytj_setting">一体机设备ID配置</string>
    <string name="equipment_id">操作屏设备ID</string>
    <string name="equipment_id_ytj">一体机设备ID</string>
    <string name="tdm_device_id_setting">读写器设备ID配置</string>
    <string name="tdm_device_id">通道门读写器设备ID</string>
    <string name="title_cabinet_parameters">柜体参数</string>
    <string name="title_cabinet_in_order">柜体排列顺序</string>
    <string name="cabinet_name">%1$s柜</string>
    <string name="not_closed_door_alarm_time">未关门报警时间</string>
    <string name="not_closed_door_alarm_time_caption_text">箱门未关%1$s发出声音警报</string>
    <string name="title_too_many_files">卷宗数量过多提醒</string>
    <string name="too_many_files_number">当卷宗数量超过%1$s本时,存取预览界面会文字提醒,并且在存取操作时语言提醒.</string>
    <string name="title_routine_management">其他配置</string>
    <string name="synchronised_time">自动同步周期（设备重启后生效）</string>
    <string name="synchronised_time_caption_text">每隔%1$s自动和服务同步数据</string>
    <string name="countdown">自动返回主界面时间配置</string>
    <string name="countdown_caption_text">无人操作%1$s后将自动返回主界面</string>
    <string name="date_and_time">日期和时间</string>
    <string name="automatic_restart">自动重启配置（设备重启后生效）</string>
    <string name="title_automatic_restart">自动重启：</string>
    <string name="automatic_restart_caption_text">自动重启时间：%1$d时</string>
    <string name="turn_on_automatic_task">开启任务</string>
    <string name="turn_off_automatic_task">关闭任务</string>
    <string name="title_set_time">设置时间(单位：时)：</string>
    <string name="enter_restart_time">请输入自动重启的小时（重启后生效）</string>
    <string name="title_sound_switch">提示音</string>
    <string name="sound_switch_on">提示音开启</string>
    <string name="sound_switch_off">提示音关闭</string>
    <string name="title_restart_now">立即重启</string>
    <string name="restart_now">点击立即重启设备</string>
    <string name="restart_now_sure">点击确认按钮立即重启设备。</string>
    <string name="title_enable">是否启用：</string>
    <string name="enable">是否启用</string>
    <string name="automatic_task">任务配置（设备重启后生效）</string>
    <string name="title_senior_management">高级管理</string>
    <string name="title_biometrics">生物识别（重启后生效）</string>
    <string name="biometrics_value">当前采用的生物识别方式是：%1$s</string>
    <string name="sign_broken">对可能已损坏的箱体进行标定</string>
    <string name="title_sign_broken">坏柜标定</string>
    <string name="calibration">对本柜所有箱体进行盘点并根据盘点结果进行校准</string>
    <string name="title_calibration">自动校准</string>
    <string name="title_anti_theft_mechanism">防盗机制</string>
    <string name="anti_theft_mechanism_on">防盗机制开启（非正常开门将会语音提醒。）</string>
    <string name="anti_theft_mechanism_off">防盗机制关闭</string>
    <string name="title_calibration_idler">闲时校准（设备重启后生效）</string>
    <string name="calibration_idler">设置闲时校准时间</string>
    <string name="calibration_idler_caption_text">闲时校准时间：%1$d时</string>
    <string name="android_system">Android管理</string>
    <string name="title_display_bar">Android系统设置</string>
    <string name="display_bar">点击进入Android系统设置界面</string>
    <string name="display_bar_prompt">警告！\n请不要在Android系统设置界面里卸载（删除）NewFileCabinet，一旦卸载（删除）设备将直接报废，需返厂维修！</string>
    <string name="title_android_file_manager">Android文件管理器</string>
    <string name="android_file_manager">点击进入Android文件管理器</string>
    <string name="title_android_browser">Android浏览器</string>
    <string name="android_browser">点击进入Android浏览器</string>
    <string name="version_management">版本管理</string>
    <string name="app_version">APP版本</string>
    <string name="title_file_manager">U盘更新APP</string>
    <string name="file_manager">请先在U盘根文件夹里放入命名为：FileManagementCabinet.apk的文件，把U盘插入靠下面的那个USB口之后点击更新。</string>
    <string name="file_not_exist">未找到该文件，请检查文件命名和U盘插入的USB口</string>
    <string name="title_uninstall_app">卸载程序</string>
    <string name="uninstall_app">点击卸载本程序，卸载后1分钟内设备会自动重启！</string>
    <string name="uninstall_app_prompt">点击卸载本程序，卸载后1分钟内设备会自动重启！\n期间会出现错误提示，属于正常现象，请点击确定按钮。</string>
    <string name="uninstall_app_fail">设置默认桌面失败，停止卸载，请重新尝试卸载！</string>
    <string name="low_level_management">底层管理</string>
    <string name="title_debug">日志打印/DeBug模式</string>
    <string name="ping_address">Ping的地址:</string>
    <string name="ping_count">Ping的次数:</string>
    <string name="ping_wait_time">ping超时时间:</string>
</resources>