<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="onLongClickListener"
            type="android.view.View.OnLongClickListener" />

    </data>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login_dialog_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="60dp"
        android:paddingRight="20dp"
        android:paddingBottom="60dp">

        <com.zk.cabinet.view.ClearEditText
            android:id="@+id/dialog_other_login_account_edt"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/shape_edit_text_bg"
            android:drawableLeft="@mipmap/ic_username_hit"
            android:drawablePadding="20dp"
            android:hint="@string/account_hint"
            android:paddingLeft="30dp"
            android:textColor="@color/gray_deep"
            android:textColorHint="@color/gray_deep"
            android:textSize="24sp" />

        <com.zk.cabinet.view.ClearAndSeePwdEditText
            android:id="@+id/dialog_other_login_pwd_edt"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/shape_edit_text_bg"
            android:drawableLeft="@mipmap/ic_password_hit"
            android:drawablePadding="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:textColor="@color/gray_deep"
            android:textColorHint="@color/gray_deep"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_other_login_dismiss_btn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector_menu_orange"
                android:onClick="@{onClickListener}"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dialog_other_login_sure_btn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/selector_menu_green"
                android:onClick="@{onClickListener}"
                android:onLongClick="@{onLongClickListener}"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</layout>